# example-projects

./: .gitignore  README.md
clojure/with-lein/: CHANGELOG.md  README.md  project.clj
clojure/with-lein/doc/: intro.md
clojure/with-lein/src/with_lein/: core.clj
clojure/with-lein/test/with_lein/: core_test.clj
elixir/mix/hello_world/: README.md  mix.exs
elixir/with-mix/: README.md
fortran/with-fpm/: fpm.toml
fortran/with-fpm/app/: main.f90
fortran/with-fpm/src/: with-fpm.f90
javascript/local-package/: main.js  package.json
javascript/with-npm-package-lock/: package-lock.json  package.json
javascript/with-package-json/: package.json
javascript/with-v1-yarn/: package.json
javascript/with-v2-yarn/: package.json
javascript/with-v2-yarn-workspaces/: package.json
php/: .fossa.yml  composer.json
python/poetry/: pyproject.toml
python/poetry/pyproject/: pyproject.toml
python/poetry/pyproject-poetry/: pyproject.toml
swift-ios-xcode-proj/using-swift-pm-example/: ContentView.swift  using_swift_pm_exampleApp.swift
swift-ios-xcode-proj/using-swift-pm-example.xcodeproj/: project.pbxproj
swift-ios-xcode-proj/using-swift-pm-example.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
swift-ios-xcode-proj/using-swift-pm-example.xcodeproj/project.xcworkspace/xcuserdata/megh.xcuserdatad/: UserInterfaceState.xcuserstate
swift-ios-xcode-proj/using-swift-pm-example.xcodeproj/xcuserdata/megh.xcuserdatad/xcschemes/: xcschememanagement.plist
swift-package/: Package.resolved  Package.swift
